@@ -40,8 +40,8 @@ enable = []
 
 class Main():
 
-    version = '0.0.10'
-    versionstring = "First pants, then shoes... o.O"
+    version = '0.0.11'
+    versionstring = "And now for something completely different"
     verbosity = 50
     executable = os.path.basename(sys.argv[0])
     basedir = os.path.dirname(os.path.abspath(sys.argv[0]))
